--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
 html {
+  height: 100vh;
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -7,6 +8,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 article,
 aside,
